objects/Brick_Seva_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Apt_House_Suite__c</fullName>
        <label>Apt / House / Suite #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donator_Name__c</fullName>
        <description>Donator / Sevak Info</description>
        <inlineHelpText>Donator / Sevak Info</inlineHelpText>
        <label>Donator Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donator_Phone_Number__c</fullName>
        <description>Donator Phone Number</description>
        <inlineHelpText>Please enter donator phone number</inlineHelpText>
        <label>Donator Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Karyakar_Name__c</fullName>
        <label>Karyakar Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karyakar_Zone__c</fullName>
        <label>Karyakar Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Union Turnpike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flushing 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flushing 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nassau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suffolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Hills &amp; Fresh Meadows</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Satsangi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gunbhavi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Detail__c</fullName>
        <label>Zone Detail</label>
        <referenceTo>Brick_Seva__c</referenceTo>
        <relationshipLabel>Bricks Seva Detail</relationshipLabel>
        <relationshipName>Bricks_Seva_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Brick_s__c</fullName>
        <label># of Brick(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Passes_Required__c</fullName>
        <label># of Passes Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brick Seva Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NYLI-BRCK-{MM}-{DD}-{0000}</displayFormat>
        <label>Brick Seva Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bricks Seva Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>